2005-11-23  Wayne Bergeron  <wb@vallnet.com>
	* src/GenericFilter.py (IsLessThanNthGenerationAncestorOfBookmarked):
	Add new filter rule.

2005-11-23  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py (cl_export): Add grdb export from the CLI.
	* src/plugins/Check.py (check_parent_relationships): Step through
	the progress bar.
	* test/runtest.sh: Add txt format and family_group report.
	* test/impex.sh: Add import/export test set.
	* example/gramps/example.gramps: Correct errors.
	* src/BaseDoc.py (SheetParser.startElement): Tolerate missing
	tmargin and bmargin (when reading older style files).
	* src/docgen/PSDrawDoc.py (encode): Add tolerant encoder;
	(patch_text): Remove unused method.
	* src/docgen/AsciiDoc.py (reformat_para): Add optional argument
	for the first line indent; (start_paragraph): remove leader
	handling; (end_paragraph): Handle all formatting, including leader
	and first line indent.

2005-11-22  Don Allingham  <don@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: fix spacing for top and bottom margin
	* src/ArgHandler.py: fix typo
	* src/docgen/PSDrawDoc.py: removed print statements
	* src/plugins/DetDescendantReport.py: fixed insert_image
	* src/ReadGedcom.py: Fix handling of CONT

2005-11-22  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/DetDescendantReport.py (write_write_children):
	Properly check for henry number; (write_mate): omit children list.
	* src/Report.py: Better packing in vertical direction.
	* test/runtest.sh: Switch to doing many reports in one call.

2005-11-22  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: Fix output_notebook remains.

2005-11-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/AddrEdit.py,
	* src/AttrEdit.py,
	* src/EditPerson.py,
	* src/EditPlace.py,
	* src/EventEdit.py,
	* src/FamilyView.py,
	* src/MediaView.py,
	* src/NameEdit.py,
	* src/Sources.py: Better support for readonly DB;
	* src/ImageSelect.py: Better support for readonly DB;